fix letter spacing

--- a/src/globalStyle.css
+++ b/src/globalStyle.css
@@ -138,5 +138,4 @@ body {
   font-weight: 700;
   background-color: #000;
   color: #fff;
-  letter-spacing: 0.12rem;
 }
